--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -19,7 +19,7 @@
         </script>
         <script src="js/zepto.js"></script>
         <script src="js/coffee-templates.js"></script>
-        <script src="lib/wraith.js"></script>
+        <script src="../../lib/wraith.js"></script>
         <script src="lib/test.js"></script>
         <script>
             new Wraith.Bootloader()
