--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -19,7 +19,7 @@
         <script type="text/template" id="ListItem">
             <fieldset>
                 <label>
-                    <input type="checkbox" {{#selected}}selected{{/selected}} />
+                    <input type="checkbox" {{#selected}}checked{{/selected}} />
                     {{text}}
                 </label>
             </fieldset>
@@ -27,7 +27,7 @@
         <script src="js/zepto.js"></script>
         <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
         <script src="../../lib/wraith.js"></script>
-        <script src="lib/test.js"></script>
+        <script src="lib/todo.js"></script>
         <script>
             new Wraith.Bootloader()
         </script>
