--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/todo.css">
     </head>
     <body>
         <div data-controller="SelectList">
@@ -18,9 +16,11 @@
         </div>
         <script type="text/template" id="ListItem">
             <fieldset>
+                <div class="delete">⊗</div>
                 <label>
                     <input type="checkbox" {{#selected}}checked{{/selected}} />
-                    {{text}}
+                    <div class="name">{{text}}</div>
+                    <div class="select">✓</div>
                 </label>
             </fieldset>
         </script>
