Added todomvc submodule, got config setup to handle it

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -24,8 +24,8 @@
                 </label>
             </fieldset>
         </script>
-        <script src="js/zepto.js"></script>
-        <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/hydra.js/3.1.2/hydra.min.js"></script>
         <script src="../../lib/wraith.js"></script>
         <script src="lib/todo.js"></script>
         <script>
