Got basic todo functionality working

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -25,7 +25,7 @@
             </fieldset>
         </script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/hydra.js/3.1.2/hydra.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
         <script src="../../lib/wraith.js"></script>
         <script src="lib/todo.js"></script>
         <script>
