--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -10,9 +10,10 @@
         <link rel="stylesheet" href="css/todo.css">
     </head>
     <body>
-        <div data-controller="SelectList">
-            <h1>Todo List MVC Example!</h1>
+        <div data-controller="TaskManager">
             <input type="text" width="100" placeholder="Type a task here" />
+            <ul data-controller="SelectList">
+            </ul>
         </div>
         <script type="text/template" id="ListItem">
             <fieldset>
