[nested_controllers] Started adding docs in a fit of ADD. Also broke a bunch of crap

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -10,9 +10,10 @@
         <link rel="stylesheet" href="css/todo.css">
     </head>
     <body>
-        <div data-controller="TaskManager">
+        <div data-controller="TodoManager">
             <input type="text" width="100" placeholder="Type a task here" />
             <ul data-controller="SelectList">
+                <li data-view="ListItem" data-map="list.items"></li>
             </ul>
         </div>
         <script type="text/template" id="ListItem">
