[nested_controllers] Breaking stuff before fixing stuff

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -13,7 +13,7 @@
         <div data-controller="TodoManager">
             <input type="text" width="100" placeholder="Type a task here" />
             <ul data-controller="SelectList">
-                <li data-view="ListItem" data-map="list.items"></li>
+                <div data-template="ListItem" data-map="list.items"></div>
             </ul>
         </div>
         <script type="text/template" id="ListItem">
