[nested_controllers] Created a view with the intention of nesting it into controllers instead of nested controllers (what was I thinking?).

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -12,7 +12,7 @@
     <body>
         <div data-controller="TodoManager">
             <input type="text" width="100" placeholder="Type a task here" />
-            <ul data-controller="SelectList">
+            <ul data-view="SelectList">
                 <div data-template="ListItem" data-map="list.items"></div>
             </ul>
         </div>
