Got the  toggleall check box working properly. Going to figure out single instance views.

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -28,8 +28,10 @@
                 </fieldset>
             </li>
         </script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
+        <!--<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>-->
+        <script src="../../lib/hogan.js"></script>
+        <script src="../../lib/zepto.js"></script>
         <script src="../../lib/wraith.js"></script>
         <script src="lib/todo.js"></script>
         <script>
