--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -12,8 +12,7 @@
     <body>
         <div data-controller="TodoManager">
             <input type="text" width="100" placeholder="Type a task here" />
-            <ul data-view="SelectList">
-                <div data-template="ListItem" data-map="list.items"></div>
+            <ul data-template="ListItem" data-map="list.items" data-repeat>
             </ul>
         </div>
         <script type="text/template" id="ListItem">
@@ -21,17 +20,15 @@
                 <fieldset>
                     <div class="delete">⊗</div>
                     <label>
-                        <input type="checkbox" {{#selected}}checked{{/selected}} />
-                        <div class="name">{{text}}</div>
+                        <input type="checkbox" <% if (selected) { %>checked<% } %> />
+                        <div class="name"><%=text%></div>
                         <div class="select">✓</div>
                     </label>
                 </fieldset>
             </li>
         </script>
-        <!--<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>-->
-        <script src="../../lib/hogan.js"></script>
-        <script src="../../lib/zepto.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
         <script src="../../lib/wraith.js"></script>
         <script src="lib/todo.js"></script>
         <script>
