--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -12,21 +12,19 @@
     <body>
         <div data-controller="TodoManager">
             <input type="text" width="100" placeholder="Type a task here" />
-            <ul data-template="ListItem" data-map="list.items" data-repeat>
+            <ul>
+                <li data-bind="list.items" data-repeat>
+                    <fieldset>
+                        <div class="delete">⊗</div>
+                        <label>
+                            <input type="checkbox" <% if (get('selected')) { %>checked<% } %> />
+                            <div class="name"><%-text%></div>
+                            <div class="select">✓</div>
+                        </label>
+                    </fieldset>
+                </li>
             </ul>
         </div>
-        <script type="text/template" id="ListItem">
-            <li>
-                <fieldset>
-                    <div class="delete">⊗</div>
-                    <label>
-                        <input type="checkbox" <% if (selected) { %>checked<% } %> />
-                        <div class="name"><%=text%></div>
-                        <div class="select">✓</div>
-                    </label>
-                </fieldset>
-            </li>
-        </script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
         <script src="../../lib/wraith.js"></script>
