--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -24,6 +24,7 @@
                     </fieldset>
                 </li>
             </ul>
+            <div data-bind="list.items">{{length()}}</div>
         </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
