[nested_controllers] Got updating of  repeating views working now

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div data-controller="TodoManager">
-            <input type="text" width="100" placeholder="Type a task here" class="listitem" />
+            <input type="text" width="100" placeholder="Type a task here" />
             <ul>
                 <li data-bind="list.items" data-repeat>
                     <fieldset>
