--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -25,6 +25,7 @@
                 </li>
             </ul>
             <div data-bind="list.items">Count: <strong>{{length()}}</strong></div>
+            <div data-bind="list">Completed: <strong>{{completed()}}</strong></div>
         </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
