--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/todo.css">
     </head>
     <body>
-        <div data-controller="TodoManager">
+        <div data-controller="App.TodoManager">
             <input type="text" width="100" placeholder="Type a task here" data-events="keypress:inputKeypress" />
             <ul>
                 <li data-bind="list.items" data-repeat>
@@ -24,8 +24,8 @@
                     </fieldset>
                 </li>
             </ul>
-            <div data-bind="list.items">Count: <strong>{{length()}}</strong></div>
-            <div data-bind="list">Completed: <strong>{{completed()}}</strong></div>
+            <div data-bind="list.items">Count: <strong>{{length}}</strong></div>
+            <div data-bind="list">Completed: <strong>{{completed}}</strong></div>
         </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
