Added basic testing framework with jasmine. Got tests for bootloader and base written

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -27,9 +27,7 @@
             <div data-bind="list.items">Count: <strong>{{length}}</strong></div>
             <div data-bind="list">Completed: <strong>{{completed}}</strong></div>
         </div>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js"></script>
-        <script src="../../lib/wraith.js"></script>
+        <script src="lib/wraith.js"></script>
         <script src="lib/todo.js"></script>
         <script>
             new Wraith.Bootloader()
