Added model and collection specifications. Added spechelper too.

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -14,8 +14,11 @@
   <script type="text/javascript" src="src/wraith.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/BootloaderSpec.js"></script>
   <script type="text/javascript" src="spec/BaseSpec.js"></script>
+  <script type="text/javascript" src="spec/ModelSpec.js"></script>
+  <script type="text/javascript" src="spec/CollectionSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
