Added tests for Template. Added a speed hack to the template function.

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -19,6 +19,7 @@
   <script type="text/javascript" src="spec/BaseSpec.js"></script>
   <script type="text/javascript" src="spec/ModelSpec.js"></script>
   <script type="text/javascript" src="spec/CollectionSpec.js"></script>
+  <script type="text/javascript" src="spec/TemplateSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
