Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
 <p>Now that I have identified what Wraith doesn’t have, lets talk about what it does well.</p>
 
-<p>*Implicit Model-View binding
-*Controllers that are also views (a la View-Controller pattern)
-*Handlebars-esque logicless templating
-*Template declaration directly in the DOM that doesn’t require a compilation process
-*Event binding directly from the DOM, instead of requiring JS to do so
-*Partial view updating (only update elements that changed)
-*Well under 20kb when minified</p>
-
-<h4>
+<ul>
+<li>Implicit Model-View binding</li>
+<li>Controllers that are also views (a la View-Controller pattern)</li>
+<li>Handlebars-esque logicless templating</li>
+<li>Template declaration directly in the DOM that doesn’t require a compilation process</li>
+<li>Event binding directly from the DOM, instead of requiring JS to do so</li>
+<li>Partial view updating (only update elements that changed)</li>
+<li>Well under 20kb when minified</li>
+</ul><h4>
 <a name="how-to-get-started-with-wraith" class="anchor" href="#how-to-get-started-with-wraith"><span class="octicon octicon-link"></span></a>How to get started with wraith?</h4>
 
 <p>Wraith is declarative, in that much of the heavy lifting -- data and event binding, class and text manipulation -- happens directly in the markup (HTML). Your controller is initialized from the DOM directly, so when you create your app it’ll look something like this:</p>
