--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="lib/phantom-jasmine/console-runner.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/wraith.js"></script>
+  <script type="text/javascript" src="../lib/wraith.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
