Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         </ul>
       </header>
       <section>
-        <p><img src="http://github.com/shaunspringer/wraith/raw/master/assets/wraith.gif" alt="Wraith v0.1b" title="Wraith v0.1b"></p>
+        <p><img src="http://github.com/shaunspringer/wraith/raw/master/assets/wraith.gif" alt="Wraith v0.1.0" title="Wraith v0.1b"></p>
 
 <h2>
-<a name="wraith-v01b" class="anchor" href="#wraith-v01b"><span class="octicon octicon-link"></span></a>Wraith v0.1b</h2>
+<a name="wraith-v010-" class="anchor" href="#wraith-v010-"><span class="octicon octicon-link"></span></a>Wraith v0.1.0 <a href="https://travis-ci.org/ShaunSpringer/Wraith"><img src="https://travis-ci.org/ShaunSpringer/Wraith.png?branch=master" alt="Build Status"></a>
+</h2>
 
 <h4>
 <a name="created-by-shaun-springer" class="anchor" href="#created-by-shaun-springer"><span class="octicon octicon-link"></span></a>Created by Shaun Springer</h4>
