Fixed a bug with the Model change event

--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -24,7 +24,7 @@
                     </fieldset>
                 </li>
             </ul>
-            <div data-bind="list.items">Count: <strong>{{length}}</strong></div>
+            <div data-bind="list">Count: <strong>{{items.length}}</strong></div>
             <div data-bind="list">Completed: <strong>{{completed}}</strong></div>
         </div>
         <script src="lib/wraith.js"></script>
