--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <span class="nx">App</span><span class="p">.</span><span class="nx">MainController</span> <span class="o">=</span> <span class="p">(</span><span class="kd">function</span><span class="p">(</span><span class="nx">_super</span><span class="p">)</span> <span class="p">{</span>
     <span class="kd">function</span> <span class="nx">MainController</span><span class="p">()</span> <span class="p">{</span>
         <span class="nx">_super</span><span class="p">.</span><span class="nx">call</span><span class="p">();</span>
-        <span class="k">this</span><span class="p">.</span><span class="nx">registerModel</span><span class="p">(</span><span class="nx">App</span><span class="p">.</span><span class="nx">List</span><span class="p">,</span> <span class="err">‘</span><span class="nx">list</span><span class="err">’</span><span class="p">)</span> <span class="c1">// Register our model as 'list'</span>
+        <span class="k">this</span><span class="p">.</span><span class="nx">registerModel</span><span class="p">(</span><span class="nx">App</span><span class="p">.</span><span class="nx">List</span><span class="p">,</span> <span class="s1">'list'</span><span class="p">)</span> <span class="c1">// Register our model as 'list'</span>
     <span class="p">}</span>
     <span class="nx">MainController</span><span class="p">.</span><span class="nx">prototype</span><span class="p">.</span><span class="nx">onKeypress</span> <span class="o">=</span> <span class="kd">function</span><span class="p">(</span><span class="nx">e</span><span class="p">)</span> <span class="p">{</span>
         <span class="nx">alert</span><span class="p">(</span><span class="nx">e</span><span class="p">);</span>
