--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -28,7 +28,7 @@
             <div data-bind="list">Completed: <strong>{{completed}}</strong></div>
         </div>
         <script src="lib/wraith.js"></script>
-        <script src="lib/todo.js"></script>
+        <script src="src/todo.js"></script>
         <script>
             new Wraith.Bootloader()
         </script>
