--- a/examples/comments/index.html
+++ b/examples/comments/index.html
@@ -21,9 +21,9 @@
                 </div>
             </div>
             <br />
-            <form name="commentForm" data-events="submit:formSubmit" data-observe="comment">
-                <input type="text" data-observe="author" placeholder="Your name" required />
-                <input type="text" name="comment" placeholder="Say something..." required />
+            <form name="commentForm" data-events="submit:formSubmit" data-model="commentlist.comments">
+                <input type="text" name="author" placeholder="Your name" required />
+                <input type="text" name="text" placeholder="Say something..." required />
                 <input type="submit" value="Add" />
             </form>
         </div>
