[two_way_binding] Initial support for two way binding in place

--- a/examples/comments/index.html
+++ b/examples/comments/index.html
@@ -25,6 +25,8 @@
                 <input type="text" name="author" placeholder="Your name" required />
                 <input type="text" name="text" placeholder="Say something..." required />
                 <input type="submit" value="Add" />
+                <div>Author: {{author}}</div>
+                <div>Comment: {{text}}</div>
             </form>
         </div>
         <script src="lib/wraith.js"></script>
