[two_way_binding] Got two way binding working in the comments example. need to document, refactor, write tests and other fun stuff

--- a/examples/comments/index.html
+++ b/examples/comments/index.html
@@ -22,8 +22,8 @@
             </div>
             <br />
             <form name="commentForm" data-events="submit:formSubmit" data-model="commentlist.comments">
-                <input type="text" name="author" placeholder="Your name" required />
-                <input type="text" name="text" placeholder="Say something..." required />
+                <input type="text" name="author" placeholder="Your name" value="{{author}}" required />
+                <input type="text" name="text" placeholder="Say something..." value="{{text}}" required />
                 <input type="submit" value="Add" />
                 <div>Author: {{author}}</div>
                 <div>Comment: {{text}}</div>
