[two_way_binding] Cant seem to get the test for two-way binding to pass, but refactored data-model to data-bind for consistency

--- a/examples/comments/index.html
+++ b/examples/comments/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <br />
-            <form name="commentForm" data-events="submit:formSubmit" data-model="commentlist.comments">
+            <form name="commentForm" data-bind="commentlist.comments">
                 <input type="text" name="author" placeholder="Your name" value="{{author}}" required />
                 <input type="text" name="text" placeholder="Say something..." value="{{text}}" required />
                 <input type="submit" value="Add" />
