--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -9,7 +9,8 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/phantom-jasmine/console-runner.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>-->
+  <script type="text/javascript" src="lib/zepto.js"></script>
   <!-- include source files here... -->
   <script type="text/javascript" src="../lib/wraith.js"></script>
 
@@ -20,6 +21,7 @@
   <script type="text/javascript" src="spec/ModelSpec.js"></script>
   <script type="text/javascript" src="spec/CollectionSpec.js"></script>
   <script type="text/javascript" src="spec/TemplateSpec.js"></script>
+  <script type="text/javascript" src="spec/TwoWayBindingSpec.js"></script>
 
 </head>
 
