[two_way_binding] Fixed the form submit two-way test.

--- a/tests/fixtures/twowaybinding.html
+++ b/tests/fixtures/twowaybinding.html
@@ -1,4 +1,4 @@
-<div data-controller="App.CommentController">
+<div data-controller="TwoWayBindingTest.CommentController">
   <form id="comments-form" data-bind="commentlist.comments">
     <input type="text" name="comment" value="{{comment}}" required />
     <div id="comment">Comment: {{comment}}</div>
