[model_validation] Fixed a bug in template interpolation. Got errors stored as key/value pairs on the model errors method, and now acts as a bindable attribute

--- a/examples/comments/index.html
+++ b/examples/comments/index.html
@@ -9,6 +9,7 @@
     </head>
     <style>
         .hidden { display: none; }
+        .error { outline: 1px solid red; }
     </style>
     <body>
         <div data-controller="App.CommentController">
@@ -24,16 +25,13 @@
             </div>
             <br />
             <form name="commentForm" data-bind="commentlist.comments">
-                <input type="text" name="author" placeholder="Your name" value="{{author}}" required data-class="error:errors.author" />
-                <input type="text" name="text" placeholder="Say something..." value="{{text}}" required />
-                <input type="text" name="rating" placeholder="Rating (0-5)" value="{{rating}}" required />
+                <input type="text" name="author" placeholder="Your name" value="{{author}}" data-class="error:errors.author" required />
+                <input type="text" name="text" placeholder="Say something..." value="{{text}}" data-class="error:errors.text" required />
+                <input type="text" name="rating" placeholder="Rating (0-5)" value="{{rating}}" data-class="error:errors.rating" required />
                 <input type="submit" value="Add" />
                 <div>Author: {{author}}</div>
                 <div>Comment: {{text}}</div>
                 <div>Rating: {{rating}}</div>
-                <div id="errors">
-                    Errors: {{errors.length}}
-                </div>
             </form>
         </div>
         <script src="lib/wraith.js"></script>
