--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Wraith : An MVC framework based off a few different pieces of frameworks that I really liked.  Credit to AngularJS, Backbone, Spine for inspiration." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Wraith by ShaunSpringer</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Wraith</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Wraith</h1>
+        <p>An MVC framework based off a few different pieces of frameworks that I really liked.  Credit to AngularJS, Backbone, Spine for inspiration.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ShaunSpringer/Wraith">View on GitHub</a>
+        <p class="view"><a href="https://github.com/ShaunSpringer/Wraith">View the Project on GitHub <small>ShaunSpringer/Wraith</small></a></p>
 
-          <h1 id="project_title">Wraith</h1>
-          <h2 id="project_tagline">An MVC framework based off a few different pieces of frameworks that I really liked.  Credit to AngularJS, Backbone, Spine for inspiration.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ShaunSpringer/Wraith/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ShaunSpringer/Wraith/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/ShaunSpringer/Wraith/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ShaunSpringer/Wraith/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ShaunSpringer/Wraith">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p><img src="http://github.com/shaunspringer/wraith/raw/master/assets/wraith.gif" alt="Wraith v0.1.2" title="Wraith v0.1.2"></p>
 
 <h2>
@@ -305,17 +302,12 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Wraith maintained by <a href="https://github.com/ShaunSpringer">ShaunSpringer</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ShaunSpringer">ShaunSpringer</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
